@@ -325,6 +325,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Aymara (ay)
 * Belarusian (be)
 * Bulgarian (bg)
+* Bihara (bh)
 * Breton (br)
 * Catalan (ca)
 * Czech (cs)
@@ -346,6 +347,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Georgian (ka)
 * Kazakh (kk)
 * Korean (ko)
+* Kashmiri (ks)
 * Ripuarian (ksh)
 * Latin (la)
 * Luganda (lg)
@@ -353,11 +355,15 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Lithuanian (lt)
 * Marathi (mr)
 * Low Saxon (nds)
+* Nepali (ne)
+* Nepal Bhasa (new)
 * Dutch (nl)
 * Occitan (oc)
+* Pali (pi)
 * Polish (pl)
 * Romanian (ro)
 * Russian (ru)
+* Sanskrit (sa)
 * Sicilian (scn)
 * Slovak (sk)
 * Swedish (sv)
